[project]
name = "cl-all-in-one"
version = "0.1.0"
description = "Continual All-in-One Adverse Weather Removal with Knowledge Replay on a Unified Network Structure"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch==2.1.2",
    "torchvision==0.16.2",
    "torchaudio==2.1.2",
    "numpy>=1.24.1,<2",
    "opencv-python>=4.10",
    "pillow>=10.2",
    "matplotlib>=3.7",
    "einops>=0.8",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu118"]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
